# it-edit-2.91

./: AUTHORS  CONTRIBUTORS  ChangeLog  NEWS  README  README.rst  configure.ac  index.html  params.json
data/: Makefile.in
data/README/: index.html
data/README/_sources/: index.txt
desktop/: Makefile.in
doc/: Makefile.am  Makefile.in  it-edit.html
it-edit-2.91/: Makefile.am  Makefile.in  Makefile.mk  config.h.in  configure
it-edit-2.91/data/: Makefile.am
it-edit-2.91/data/README/: README.html  objects.inv  search.html  searchindex.js
it-edit-2.91/data/README/_sources/: README.txt
it-edit-2.91/desktop/: Makefile.am
it-edit-2.91/man/: Makefile.am  Makefile.in  it-edit.1
it-edit-2.91/source/Callbacks/: configuration_callbacks.c  configuration_callbacks.h  edition_callbacks.c  edition_callbacks.h  editor_callbacks.c  editor_callbacks.h  gui_callbacks.c  highlight_selection_callbacks.c  terminals_callbacks.c  terminals_callbacks.h
it-edit-2.91/source/DEBUG/: debug_search_by_signals.c
it-edit-2.91/source/Editor/: editor.h
it-edit-2.91/source/GUI/configure/: configure_gui_elements.c
it-edit-2.91/source/GUI/dialogs/: dialogs.c  dialogs.h  message_dialog.c  message_dialog.h
it-edit-2.91/source/GUI/setup/: setup_gui.c
it-edit-2.91/source/Headers/: defines.h  global_vars.c  includes.h
it-edit-2.91/source/Headers/Structures/: GUI_structures.h  setting_structure.h
it-edit-2.91/texi/: Makefile.in
it-edit-2.91/translations/: Makefile.in
it-edit-2.91/translations/share/locale/de/LC_MESSAGES/: it-edit.pot
it-edit-2.91/translations/share/locale/fr/LC_MESSAGES/: it-edit.mo  it-edit.pot
source/: Makefile.am  Makefile.in  main.c
source/Callbacks/: files_callbacks.c  files_callbacks.h  gui_callbacks.h  highlight_selection_callbacks.h  search_settings_callbacks.c  search_settings_callbacks.h
source/Configuration/: configuration.c  configuration.h
source/DEBUG/: debug_search_by_signals.h
source/Editor/: editor.c
source/GUI/configure/: configuration_dialog.c  configuration_dialog.h  configure_gui_elements.h
source/GUI/setup/: setup_gui.h
source/Headers/: global_vars.h
source/Headers/Structures/: editor_structures.h
texi/: Makefile.am  it-edit.info  it-edit.texi
translations/: Makefile.am
translations/share/locale/de/LC_MESSAGES/: it-edit.mo
