SUBDIRS = . source translations data man texi desktop doc

nobase_pkgdata_DATA   =       ./source/*.c \
                              ./source/Callbacks/*.c \
                              ./source/Callbacks/*.h \
                              ./source/GUI/configure/*.c \
                              ./source/GUI/configure/*.h \
                              ./source/GUI/dialogs/*.c \
                              ./source/GUI/dialogs/*.h \
                              ./source/GUI/setup/*.c \
                              ./source/GUI/setup/*.h \
                              ./source/Editor/*.c \
                              ./source/Editor/*.h \
                              ./source/Configuration/*.c \
                              ./source/Configuration/*.h \
                              ./source/DEBUG/*.c \
                              ./source/DEBUG/*.h \
                              ./source/Headers/*.c \
                              ./source/Headers/*.h \
                              ./source/Headers/Structures/*.h \
                              ./Makefile.mk
                                                     
                       
EXTRA_DIST =  ./Makefile.mk \
              ./CONTRIBUTORS